Bug 1619180 - Speculative patch, add exception handling around gfxDWriteFont::MeasureGlyphWidth. r=jrmuizel a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D66115