gfx/thebes/gfxDWriteFonts.cpp
@@ -509,39 +509,52 @@ gfxDWriteFont::GetMeasuringMode() const {
 }
 
 gfxFloat gfxDWriteFont::MeasureGlyphWidth(uint16_t aGlyph) {
-  HRESULT hr;
-  if (mFontFace1) {
-    int32_t advance;
-    if (mUseSubpixelPositions) {
-      hr = mFontFace1->GetDesignGlyphAdvances(1, &aGlyph, &advance, FALSE);
-      if (SUCCEEDED(hr)) {
-        return advance * mFUnitsConvFactor;
+  MOZ_SEH_TRY {
+    HRESULT hr;
+    if (mFontFace1) {
+      int32_t advance;
+      if (mUseSubpixelPositions) {
+        hr = mFontFace1->GetDesignGlyphAdvances(1, &aGlyph, &advance, FALSE);
+        if (SUCCEEDED(hr)) {
+          return advance * mFUnitsConvFactor;
+        }
+      } else {
+        hr = mFontFace1->GetGdiCompatibleGlyphAdvances(
+            FLOAT(mAdjustedSize), 1.0f, nullptr,
+            GetMeasuringMode() == DWRITE_MEASURING_MODE_GDI_NATURAL, FALSE, 1,
+            &aGlyph, &advance);
+        if (SUCCEEDED(hr)) {
+          return NS_lround(advance * mFUnitsConvFactor);
+        }
       }
     } else {
-      hr = mFontFace1->GetGdiCompatibleGlyphAdvances(
-          FLOAT(mAdjustedSize), 1.0f, nullptr,
-          GetMeasuringMode() == DWRITE_MEASURING_MODE_GDI_NATURAL, FALSE, 1,
-          &aGlyph, &advance);
-      if (SUCCEEDED(hr)) {
-        return NS_lround(advance * mFUnitsConvFactor);
+      DWRITE_GLYPH_METRICS metrics;
+      if (mUseSubpixelPositions) {
+        hr = mFontFace->GetDesignGlyphMetrics(&aGlyph, 1, &metrics, FALSE);
+        if (SUCCEEDED(hr)) {
+          return metrics.advanceWidth * mFUnitsConvFactor;
+        }
+      } else {
+        hr = mFontFace->GetGdiCompatibleGlyphMetrics(
+            FLOAT(mAdjustedSize), 1.0f, nullptr,
+            GetMeasuringMode() == DWRITE_MEASURING_MODE_GDI_NATURAL, &aGlyph, 1,
+            &metrics, FALSE);
+        if (SUCCEEDED(hr)) {
+          return NS_lround(metrics.advanceWidth * mFUnitsConvFactor);
+        }
       }
     }
-  } else {
-    DWRITE_GLYPH_METRICS metrics;
-    if (mUseSubpixelPositions) {
-      hr = mFontFace->GetDesignGlyphMetrics(&aGlyph, 1, &metrics, FALSE);
-      if (SUCCEEDED(hr)) {
-        return metrics.advanceWidth * mFUnitsConvFactor;
-      }
-    } else {
-      hr = mFontFace->GetGdiCompatibleGlyphMetrics(
-          FLOAT(mAdjustedSize), 1.0f, nullptr,
-          GetMeasuringMode() == DWRITE_MEASURING_MODE_GDI_NATURAL, &aGlyph, 1,
-          &metrics, FALSE);
-      if (SUCCEEDED(hr)) {
-        return NS_lround(metrics.advanceWidth * mFUnitsConvFactor);
-      }
-    }
+  }
+  MOZ_SEH_EXCEPT(EXCEPTION_EXECUTE_HANDLER) {
+    // Exception (e.g. disk i/o error) occurred when DirectWrite tried to use
+    // the font resource; possibly a failing drive or similar hardware issue.
+    // Mark the font as invalid, and wipe the fontEntry's charmap so that font
+    // selection will skip it; we'll use a fallback font instead.
+    mIsValid = false;
+    GetFontEntry()->mCharacterMap = new gfxCharacterMap();
+    GetFontEntry()->mShmemCharacterMap = nullptr;
+    gfxCriticalError() << "Exception occurred measuring glyph width for "
+                       << GetFontEntry()->Name().get();
   }
   return 0.0;
 }
